static/stylesheets/submit.css
body {
    margin:0;
    padding:0;
}

.topbar {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    position: fixed;
    top:0;
    left: 0;
    background-color: black;
    height: 100px;
    z-index: 100;
}
.topbar > div {
    display: flex;
    flex-direction: row;
    flex-grow: 1;
    width: 100%;
    align-items: center;
    justify-content: space-evenly;
}

.topbar * {
    padding: 0;
    margin: 0;
    text-align: center;
}

.main {
    width: 100%;
    margin-top: 100px;
    display: flex;
    flex-direction: column;
    align-items: center;
    /* justify-content: center; */
}

.counter{
    display: flex;
    flex-direction: column-reverse;
    align-items: center;
    justify-content: center;
}

.counter *{
    margin-top: 0.1em;
    margin-bottom: 0.1em;
}

.counter label{
    text-align: center;
}

.counter input[type="number"]{
    font-size: 2.5em;
    width: 2em;
    padding-left: 0.5em;
    border-radius: 0.5em;
    text-align: center;
}

.minus, .plus{
    width: 50px;
    height: 50px;
    border-radius: 30%;
    font-size: 30px;
    transition: background 0.25s, transform 0.15s;
}

.minus:active, .plus:active{
    transform: scale(1.1);
}

.minus {
    /* From https://css.glass */
    background: var(--red-transparent);
    border-radius: 16px;
    box-shadow: 0 4px 30px var(--shadow);
    backdrop-filter: blur(0px);
    -webkit-backdrop-filter: blur(0px);
    border: 1px solid var(--red-opaque);
}

.plus {
    /* From https://css.glass */
    background: var(--green-transparent);
    border-radius: 16px;
    box-shadow: 0 4px 30px var(--shadow);
    backdrop-filter: blur(0px);
    -webkit-backdrop-filter: blur(0px);
    border: 1px solid var(--green-opaque);
}

.minus:active,.minus:hover{
    background: var(--red-opaque);
    cursor: pointer;
}

.plus:active,.plus:hover{
    background: var(--green-opaque);
    cursor: pointer;
}

#startposimg, #startposinput{
    width: 318px;
}

.canned-button {
    height: fit-content;
    margin: 0.5em;
    padding: 0.75em;
    font-size: 1em;
}

.canned-button.active {
    outline: 0.25em solid white;
    
}

.commentDiv{
    overflow: hidden;
}

.cannedComments{
    height: fit-content;
    overflow-x: auto;
    width: 97vw;
}

.section {
    padding-top: 1em;
    padding-bottom: 1em;
    display:flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    width: 100%;
}

.sectionR {
    display:flex;
    flex-direction: row;
    align-items: center;
}

.section div{
    margin: 0.5em;
}

.section h1{
    margin: 0;
}

.miss{
    background-color: rgba(255,0,0,.25);
}

.spacePairs .counter{
    padding-left: 1em;
    padding-right: 1em;
}


#endClimb{
    margin:0px;
    /* transform: rotate(-90deg);
    transform-origin: center;
    width: 50vh;
    height: 10vw; */
    /* writing-mode: sideways-lr; */
    /* height: 40vh; */
}

.endPosSect{
    flex-direction: column-reverse;
}

#endgame{
    align-items: flex-start;
}

.cannedComments{
    display: flex;
}

#comments{
    width: 90%;
    border-radius: 0.5em;
}

#shift-select{
    display: flex;
    overflow-x: auto;
    height: fit-content;
    width: 97vw;
}

#shift-select button {
    font-size: 20px;
}

#shift-select button:hover{
    cursor: pointer;
}

#shift-select button.selected{
    background-color: blue;
}

.main-input.inactive .active{
    display:none;
}

.shift-thing {
    display:none;
}

.main-input.shift-0 .shift-thing.shift-auto,
.main-input.shift-1 .shift-thing.shift-transition,
.main-input.shift-2 .shift-thing.shift-firstActiveShift,
.main-input.shift-3 .shift-thing.shift-secondActiveShift,
.main-input.shift-6 .shift-thing.shift-endgame,
.main-input.shift-i1 .shift-thing.shift-firstInactiveShift,
.main-input.shift-i2 .shift-thing.shift-secondInactiveShift,
.main-input.shift-pregame .shift-thing.shift-pregame,
.main-input.shift-postgame .shift-thing.shift-postgame{
    display: block;
}

.field{
    display: flex;
    justify-content: left;
    position: relative;
}

#fieldHighlight {
    width: 10%;
    height: 100%;
    background-color: rgb(255,255,0,0.2);
    position: absolute;
    z-index: 100;
}

.field img{
    width:31.8px;
    padding: 0px;
    margin: 0px;
}

.row{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.column{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

h1{
    margin: 0px;
}

.gameTime{
    height: 50px;
    width: 50px;
    border-radius: 16px;
    transition: background 0.25s, transform 0.15s;
    /* From https://css.glass */
    background: rgba(6, 16, 40, 0.67);
    border-radius: 16px;
    box-shadow: 0 4px 30px var(--shadow);
    backdrop-filter: blur(0px);
    -webkit-backdrop-filter: blur(0px);
    border: 1px solid rgba(6, 16, 40, 1);
    font-size: small;
    text-wrap: wrap;
    margin-left: 10px;
}

.gameTime:active,.gameTime:hover{
    background: rgba(6, 16, 40);
    cursor: pointer;
}

.gameTime:active{
    transform: scale(1.1);
}

.specialCounter{
    flex-direction: row;
}

.specialCounter input[type="number"]{
    width: 40px;
    font-size: 20px;
    margin: 2px;
}

.specialCounter .plus, .specialCounter .minus{
    width: 40px;
    height: 40px;
    font-size: 20px;
    margin: 2px;
} 

.removeButton{
    background-color: var(--red-opaque);
}

#preGame{
    display: flex;
    flex-direction: column;
}

#game{
    display: none;
    flex-direction: column;
}

#postGame{
    display: none;
    flex-direction: column;
}

.fouls *{
    margin: 2px;
}

.fouls .counter .plus, .fouls .counter .minus{
    height: 40px;
    width: 40px;
    border-radius: 15px;
    font-size: 20px;
}

.fouls .counter input[type="number"]{
    height: 40px;
    width: 40px;
    border-radius: 15px;
    font-size: 20px;
}

.toggle-btn{
    display: flex;
    width: 75px;
    height: 75px;
    border-radius: 5px;
    text-align: center;
    align-items: center;
    justify-content: center;
    /* From https://css.glass */
    background: rgba(16, 27, 54, 0.53);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    -webkit-backdrop-filter: blur(5px);
    border: 2px solid rgba(6, 16, 40, 0.59);
    margin: 6px;
    transition: background 0.25s, transform 0.15s;
}

.toggle-btn input[type="checkbox"]{
    display: none;
}

.toggle-btn:has(input[type="checkbox"]:checked){
    border: 2px solid rgba(255, 255, 255, 1);
    background: rgba(6, 16, 40, 1);
    color: var(--anthony-wheeler-bwoo)
}

.toggle-btn:has(input[type="checkbox"]:not(:checked)){
    border: 2px solid rgba(6, 16, 40, 0.59);
    background: rgba(6, 16, 40, 0.53);
    color: var(--white)
}

.toggle-btn:hover .toggle-btn:active{
    background: rgba(6, 16, 40, 1);
}

.toggle-btn:active{
    transform: scale(1.1);
}

.toggle-btn-wrapper{
    display: flex;
    width: fit-content;
    height: fit-content;
}

.toggle-btn p{
    text-align: center;
}

